--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 .App {
-   text-align: center;
+   width: 100vw;
+   height: 180vh;
+   /* text-align: center; */
+   background-image: url('https://wallpapercave.com/wp/wp6591115.jpg');
+   /* background-repeat: no-repeat; */
+   background-size: cover;
 }
