--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -2,16 +2,21 @@
     background-color: rgb(0, 110, 255);
     width: 400px;
     border: none;
+    height: 2.6%;
+    right: 3%;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    margin-bottom: 10px;
 }
 
 .input{
-border: none;
-width: 80%;
+    border: none;
+    width: 77%;
+    margin-left: 3%;
 }
 
 .btn{
     background: transparent;
     border: none;
     width: 20%;
-
 }
