--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,5 +1,6 @@
 .wrapperCard{
     background-color:blueviolet;
+    margin-top: 50px;
     width: 330px;
     height: auto;
     border-radius: 8px;
