--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
    
    /* text-align: center; */
    background-image: url('https://wallpapercave.com/wp/wp6591115.jpg');
-   
-   /* background-repeat: no-repeat; */
+   background-repeat: repeat-y;
    background-size: cover;
 }
