--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -26,6 +26,14 @@ text-align: center;
     background-color: brown;
 }
 
+.btnFav{
+    background-color:rgba(240, 248, 255, 0.151);
+    position: absolute;
+    top: 5px;
+    left: 5%;
+    border-radius: 20px;
+}
+
 .name {
     position: absolute;
     width: 60%;
