--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,29 +1,37 @@
-.navbar{
-    background-color: rgb(14, 92, 160);
-    height: 40px;
-    margin-bottom: 5px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 999;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(14, 92, 160, 0.8);
+  height: 40px;
+  margin-bottom: 5px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+}
+
+.navbar-button {
+  display: flex;
+  align-items: center;
 }
 
 .stylesnav {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    font-weight: bold;
-    text-decoration: none;
-    color: #fff;
-    background-color: #333;
-    border-radius: 5px;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .stylesnav:hover {
-    background-color: #ff7f50;
-    color: #fff;
-    transform: scale(1.1);
-  }
-  
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  background-color: rgba(51, 51, 51, 0.8);
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out;
+  margin-right: 5px;
+}
+
+.stylesnav:hover {
+  background-color: #ff7f50;
+  color: #fff;
+  transform: scale(1.1);
+}
