--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,22 +1,38 @@
-.wrapperSearch{
-    background-color: rgb(0, 110, 255);
-    width: 400px;
+.wrapperSearch {
+    background-color: rgba(0, 110, 255, 0.8);
+    width:auto;
+    
     border: none;
-    height: 2.6%;
-    right: 3%;
+    margin-right: 30px;
+    
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     margin-bottom: 10px;
-}
-
-.input{
+    display: flex;
+    align-items: center;
+  }
+  
+  .input {
     border: none;
-    width: 77%;
+    flex-grow: 1;
+    padding: 5px;
     margin-left: 3%;
-}
-
-.btn{
-    background: transparent;
+  }
+  
+  .btn {
+    background-color: rgba(0, 0, 0, 0.2);
     border: none;
-    width: 20%;
-}
+    width: 30px;
+    height: 30px;
+    margin-right: 3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
+  .btn:hover {
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  
