--- a/src/components/Favorites/Favorites.module.css
+++ b/src/components/Favorites/Favorites.module.css
@@ -1,6 +1,7 @@
 
 .titulo{
-    text-align:center;
+    top: 40px;
+   
     color: aliceblue;
     position: absolute;
     margin-top: 2px;
@@ -12,6 +13,33 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-top: 90px;
+    margin-top: 150px;
 }
 
+.filters {
+    top: 90px;
+    position: absolute;
+    background-color: #f1f1f1;
+    padding: 3px;
+    border-radius: 10px;
+    animation: lights 2s infinite alternate;
+    height: 26px;
+  }
+  
+  @keyframes lights {
+    0% {
+      box-shadow: 0 0 5px #1ddb0b, 0 0 10px #1ddb0b, 0 0 10px #1ddb0b, 0 0 20px #1ddb0b;
+    }
+    50% {
+      box-shadow: none;
+    }
+    100% {
+      box-shadow: 0 0 5px #1ddb0b, 0 0 10px #1ddb0b, 0 0 10px #1ddb0b, 0 0 20px #1ddb0b;
+    }
+  }
+ 
+  
+  
+  
+  
+  
