--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,43 @@
+
 .App {
    width: 100vw;
    height: 180vh;
    
    /* text-align: center; */
    background-image: url('https://wallpapercave.com/wp/wp6591115.jpg');
-   background-repeat: repeat-y;
-   background-size: cover;
+   /* background-size: cover;
+   background-attachment: fixed;
+   background-position: center center;
+   animation: backgroundMove 20s infinite linear; */
+   -webkit-animation: kenburns-bottom-right 5s ease-out reverse ;
+	        animation: kenburns-bottom-right 5s ease-out reverse ;
 }
+
+@-webkit-keyframes kenburns-bottom-right {
+   0% {
+     -webkit-transform: scale(1) translate(0, 0);
+             transform: scale(1) translate(0, 0);
+     -webkit-transform-origin: 84% 84%;
+             transform-origin: 84% 84%;
+   }
+   100% {
+     -webkit-transform: scale(1.25) translate(20px, 15px);
+             transform: scale(1.25) translate(20px, 15px);
+     -webkit-transform-origin: right bottom;
+             transform-origin: right bottom;
+   }
+ }
+ @keyframes kenburns-bottom-right {
+   0% {
+     -webkit-transform: scale(1) translate(0, 0);
+             transform: scale(1) translate(0, 0);
+     -webkit-transform-origin: 84% 84%;
+             transform-origin: 84% 84%;
+   }
+   100% {
+     -webkit-transform: scale(1.25) translate(20px, 15px);
+             transform: scale(1.25) translate(20px, 15px);
+     -webkit-transform-origin: right bottom;
+             transform-origin: right bottom;
+   }
+ }
